[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tollbot"
version = "0.1.0"
description = "Pay-to-scrape enforcer for AI content access"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tollbot Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
tollbot = "tollbot.cli:main"

[project.urls]
Homepage = "https://github.com/kristopolous/tollbot"
Documentation = "https://github.com/kristopolous/tollbot/blob/main/README.md"
Source = "https://github.com/kristopolous/tollbot"
Issues = "https://github.com/kristopolous/tollbot/issues"

[tool.setuptools.packages.find]
where = ["src"]
